# internal/dto/request/shorten_url_request.go
@@ -1,0 +1,7 @@
+package request
+
+// ShortenURLRequest represents the request payload for URL shortening endpoint.
+type ShortenURLRequest struct {
+	Url string `json:"url"`
+	Exp int64  `json:"exp"`
+}
